[package]
name = "uecho-sensehat"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
echonet = "1.0.0"
# sensehat = "1.1.0"
sensehat = {git = "https://github.com/rust-embedded-community/sensehat-rs.git"}
