[package]
name = "echonet-sensehat"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
echonet = "1.2.0"
signal-hook = "0.3.14"
sensehat = {git = "https://github.com/rust-embedded-community/sensehat-rs.git"}

[[bin]]
name = "echonet-sensehat"
path = "examples/echonet-sensehat.rs"
